2007-09-07  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Table export optimized.  Fixed codebook
	display in tables.  Show paging controls on both sides of a table.

2007-09-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (BrowseForm._export_controls): Page count
	computation fixed.

2007-08-29  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py (LookupForm.sorting): New method.

2007-08-27  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py: Respect password type without verification.

	* pytis/web/form.py: Respect password type without verification.

	* pytis/data/types_.py (Password): Make password verification optional.

	* pytis/web/request.py: New file.

2007-08-21  Pavel Hanak  <hanak@alfik.akont.xx>

	* pytis/form/form.py (EditForm._commit_form): Set correct
	transaction for result row.

2007-08-21  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (FieldSpec): Allow multi-level
	inheritance.

	* pytis/form/inputfield.py (PasswordField._validate): Handle
	`_ORIGINAL_VALUE' also on new record.

	* pytis/web/form.py: Use safer unicode characters to avoid
	problems in MSIE.  Handle null values in tree level column.

2007-08-20  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (FieldSpec.__init__): New argument
	'inherit' to allow inheritance.

	* pytis/util/configuration.py
	(Configuration.dump_config_template): Wrong argument name fixed.

	* pytis/form/inputfield.py: Handle invalid default values of
	enumeration fields.

2007-08-20  Pavel Hanak  <hanak@alfik.akont.xx>

	* pytis/data/postgresql.py (DBPostgreSQLFunction.call): Restore
	previous behavior (do not backup function calls).

	* pytis/data/postgresql.py (DBPostgreSQLFunction.call): Do backup
	also for function calls.

2007-08-17  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py: Display a fake value in password
	fields if the password was defined.

	* pytis/web/form.py: Major refactoring.  Added support for